test case addition and cpu monitor to do list

--- a/CSCE-689-ProjectSpring20/project_release-master/project/sim/INCA_libs/history
+++ b/CSCE-689-ProjectSpring20/project_release-master/project/sim/INCA_libs/history
@@ -15,3 +15,4 @@ s10::(14Apr2020:01:10:39):( irun -f cmd_line_comp_elab.f )
 s11::(14Apr2020:01:11:21):( irun -f cmd_line_comp_elab.f )
 s12::(14Apr2020:01:19:47):( irun -f cmd_line_comp_elab.f )
 s13::(14Apr2020:01:20:34):( irun -f cmd_line_comp_elab.f )
+s14::(14Apr2020:01:44:27):( irun -f cmd_line_comp_elab.f )
